# leti-spark-course-2024

./: README.md  pyproject.toml
exam/: generate.py
lab1/: check.py  common.py  main.py
lab1/data/: match.csv  player.csv  player_result.csv
lab1/solutions/: solution_9090_ivanovii.py  solution_9091_ivanovii.py  solution_template.py
lab2/: check.py  common.py  config.py
lab2/data/: solution_9091_ivanovii.py  solution_almost_none.py  solution_template.py
lab2/solutions/: soluition_sample.py
lab2/test_data/: solution_none.py
lab4/: docker-compose.yml  kafka-write-read-test.py
