[tool.poetry]
name = "leti-spark-course"
version = "0.1.0"
description = ""
authors = ["vtroc7 <vtroc7@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.2"
setuptools = "^73.0.1"
numpy = "1.26.4"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
pytest = "^8.3.3"
assertpy = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
